# learn_gstreamer

./: CMakeLists.txt  GStreamer_核心概念与架构.md  README.md
Basic/01_hello_world/: CMakeLists.txt  Makefile  README.md  basic-tutorial-1.c  hello_gst  hello_world.c
Basic/02_GStreamer_concepts/: CMakeLists.txt  README.md  basic-tutorial-2.c
Basic/03_Dynamic_pipelines/: CMakeLists.txt  README.md  basic-tutorial-3.c
Basic/04_Time_management/: CMakeLists.txt  README.md  basic-tutorial-4.c
Basic/05_GUI_toolkit_integration/: CMakeLists.txt  README.md  basic-tutorial-5  basic-tutorial-5.c
Basic/06_Media_formats_and_Pad_Capabilities/: CMakeLists.txt  README.md  basic-tutorial-6.c
Basic/07_Multithreading_and_Pad_Availability/: CMakeLists.txt  README.md  basic-tutorial-7.c
Basic/08_Short-cutting_the_pipeline/: CMakeLists.txt  README.md
Basic/09_Media_information_gathering/: CMakeLists.txt  README.md  basic-tutorial-9.c
Basic/10_ GStreamer_tools/: README.md
Basic/11_Debugging_tools/: CMakeLists.txt  README.md  dot-example.c
Basic/12_Streaming/: CMakeLists.txt  README.md
Basic/13_Playback_speed/: CMakeLists.txt  README.md  basic-tutorial-13.c
Basic/14_Handy_elements/: README.md
Playback/01_Playbin_usage/: CMakeLists.txt
Playback/02_Subtitle_management/: CMakeLists.txt  README.md
Playback/03_ Short-cutting_the_pipeline/: CMakeLists.txt
Playback/03_Short-cutting_the_pipeline/: CMakeLists.txt  README.md  playback-tutorial-3.c
Playback/04_Progressive_streaming/: CMakeLists.txt  README.md
Playback/05_Color_balance/: CMakeLists.txt  README.md
Playback/06_Audio_visualization/: CMakeLists.txt  README.md  playback-tutorial-6.c
Playback/07_Custom_playbin_sinks/: CMakeLists.txt  README.md  playback-tutorial-7.c
Playback/08_Hardware-accelerated_video_decoding/: CMakeLists.txt  README.md  playback-tutorial-8.c
Playback/09_Digital_audio_pass-through/: CMakeLists.txt  README.md  playback-tutorial-9.c
